@@ -24,7 +24,7 @@ class UserIdentity extends CUserIdentity
 			}
 		else if(User::encrypting($this->password)!==$user->password)
 			$this->errorCode=self::ERROR_PASSWORD_INVALID;
-		else if($user->status==0&&Yii::app()->User->loginNotActive==false)
+		else if($user->status==0&&Yii::app()->user->loginNotActive==false)
 			$this->errorCode=self::ERROR_STATUS_NOTACTIV;
 		else if($user->status==-1)
 			$this->errorCode=self::ERROR_STATUS_BAN;
