@@ -6,3 +6,11 @@ New in 0.4:
   belongs to role1 OR role 2
 
 - Rearranged Menu Items more logical
+
+- UserIdentity.php no longer needs to be copied
+
+- Created WebUser class to tie in the cookie based user management features to the DB.
+
+- Fixed some references to unset objects
+
+- Changed directory permissions to 755 and file permissions to 644 so it works better with Git source control.
